--- a/Registry.toml
+++ b/Registry.toml
@@ -3,3 +3,4 @@ uuid = "4ce79c9b-a6c3-4293-a589-1456a01f7d8e"
 repo = "https://github.com/josePereiro/CSC_Registry.jl"
 
 [packages]
+1d417f3e-fd42-11ea-18da-dda57c9b97b2 = { name = "UtilsJL", path = "U/UtilsJL" }
