--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -1,2 +1,5 @@
 ["0.8.0"]
 git-tree-sha1 = "e6af2fb7c4005947fb339bf3cbe6c6f2f509e71f"
+
+["0.8.1"]
+git-tree-sha1 = "154ee38ef311083fe341f6e140ccc3f3dfd8be15"
