New version: UtilsJL v0.4.0
UUID: 1d417f3e-fd42-11ea-18da-dda57c9b97b2
Repo:
Tree: cc1c71bebe70d329d4ebf665b1e6d8ced9c201e9

--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -1,2 +1,5 @@
 ["0.3.0"]
 git-tree-sha1 = "14e247d1dccf013a5fd0b08148fd199e4b1f7932"
+
+["0.4.0"]
+git-tree-sha1 = "cc1c71bebe70d329d4ebf665b1e6d8ced9c201e9"
