--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "14e247d1dccf013a5fd0b08148fd199e4b1f7932"
 
 ["0.4.0"]
 git-tree-sha1 = "cc1c71bebe70d329d4ebf665b1e6d8ced9c201e9"
+
+["0.4.1"]
+git-tree-sha1 = "f293eac61d144872ea1e95f74c50f020ad2ed034"
