--- a/U/UtilsJL/Deps.toml
+++ b/U/UtilsJL/Deps.toml
@@ -6,3 +6,6 @@ DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
+["0.4.2-0"]
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
