--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "cc1c71bebe70d329d4ebf665b1e6d8ced9c201e9"
 
 ["0.4.1"]
 git-tree-sha1 = "f293eac61d144872ea1e95f74c50f020ad2ed034"
+
+["0.4.2"]
+git-tree-sha1 = "a5ea1135c48ba40ca15acaa508faff36ed560a7b"
