--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "f293eac61d144872ea1e95f74c50f020ad2ed034"
 
 ["0.4.2"]
 git-tree-sha1 = "a5ea1135c48ba40ca15acaa508faff36ed560a7b"
+
+["0.4.3"]
+git-tree-sha1 = "d2dfef74811211e1bc871b42fcbcfce12e51be08"
