--- a/U/UtilsJL/Deps.toml
+++ b/U/UtilsJL/Deps.toml
@@ -9,3 +9,10 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 ["0.4.2-0"]
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+
+["0.4.4-0"]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+FixedPointNumbers = "53c48c17-4a7d-5ca2-90c5-79b7896eea93"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
