New version: UtilsJL v0.4.5
UUID: 1d417f3e-fd42-11ea-18da-dda57c9b97b2
Repo:
Tree: 9587239bfb315ae3e2462b4f6cc238b6194743e2

--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "d2dfef74811211e1bc871b42fcbcfce12e51be08"
 
 ["0.4.4"]
 git-tree-sha1 = "8ef31a64735e66f6390b169e146361ce65e5beb9"
+
+["0.4.5"]
+git-tree-sha1 = "9587239bfb315ae3e2462b4f6cc238b6194743e2"
