New version: UtilsJL v0.4.6
UUID: 1d417f3e-fd42-11ea-18da-dda57c9b97b2
Repo:
Tree: 422ba3ecf123530a0d7c5683db16ff207a38b262

--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "8ef31a64735e66f6390b169e146361ce65e5beb9"
 
 ["0.4.5"]
 git-tree-sha1 = "9587239bfb315ae3e2462b4f6cc238b6194743e2"
+
+["0.4.6"]
+git-tree-sha1 = "422ba3ecf123530a0d7c5683db16ff207a38b262"
