New version: UtilsJL v0.4.7
UUID: 1d417f3e-fd42-11ea-18da-dda57c9b97b2
Repo:
Tree: bdf135b40283f55be696f19fa4ac0b1f52b5dbdb

--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "9587239bfb315ae3e2462b4f6cc238b6194743e2"
 
 ["0.4.6"]
 git-tree-sha1 = "422ba3ecf123530a0d7c5683db16ff207a38b262"
+
+["0.4.7"]
+git-tree-sha1 = "bdf135b40283f55be696f19fa4ac0b1f52b5dbdb"
