--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "422ba3ecf123530a0d7c5683db16ff207a38b262"
 
 ["0.4.7"]
 git-tree-sha1 = "bdf135b40283f55be696f19fa4ac0b1f52b5dbdb"
+
+["0.4.8"]
+git-tree-sha1 = "d310e715f3773d056c993e2308bf9f3886c14c19"
