New version: Chemostat v0.8.2
UUID: c5987326-81b3-11ea-28dd-b531745de20f
Repo:
Tree: 3cab219b546cd4227e656ae11001f42ca85772b8

--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "e6af2fb7c4005947fb339bf3cbe6c6f2f509e71f"
 
 ["0.8.1"]
 git-tree-sha1 = "154ee38ef311083fe341f6e140ccc3f3dfd8be15"
+
+["0.8.2"]
+git-tree-sha1 = "3cab219b546cd4227e656ae11001f42ca85772b8"
