--- a/C/Chemostat/Deps.toml
+++ b/C/Chemostat/Deps.toml
@@ -17,3 +17,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 UtilsJL = "1d417f3e-fd42-11ea-18da-dda57c9b97b2"
+
+["0.8.2-0"]
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
