New version: Chemostat v0.8.3
UUID: c5987326-81b3-11ea-28dd-b531745de20f
Repo:
Tree: 385f2ec528f8ca8acb0b0acb46b6acac3e468e3d

--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "154ee38ef311083fe341f6e140ccc3f3dfd8be15"
 
 ["0.8.2"]
 git-tree-sha1 = "3cab219b546cd4227e656ae11001f42ca85772b8"
+
+["0.8.3"]
+git-tree-sha1 = "385f2ec528f8ca8acb0b0acb46b6acac3e468e3d"
