New version: Chemostat v0.8.4
UUID: c5987326-81b3-11ea-28dd-b531745de20f
Repo:
Tree: 0038c0dbcffb1941e731e165618fd64c8865dc4c

--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "3cab219b546cd4227e656ae11001f42ca85772b8"
 
 ["0.8.3"]
 git-tree-sha1 = "385f2ec528f8ca8acb0b0acb46b6acac3e468e3d"
+
+["0.8.4"]
+git-tree-sha1 = "0038c0dbcffb1941e731e165618fd64c8865dc4c"
