--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "385f2ec528f8ca8acb0b0acb46b6acac3e468e3d"
 
 ["0.8.4"]
 git-tree-sha1 = "0038c0dbcffb1941e731e165618fd64c8865dc4c"
+
+["0.9.0"]
+git-tree-sha1 = "3abb6e83206cde3fc73f92bd63a1b436d0d44cde"
