--- a/U/UtilsJL/Deps.toml
+++ b/U/UtilsJL/Deps.toml
@@ -19,3 +19,6 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 ["0.4.6-0"]
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+
+["0.4.9-0"]
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
