New version: ChemostatPlots v0.1.1
UUID: a87e7f4e-3b34-4b5e-ad6b-f0ab85127471
Repo: https://github.com/josePereiro/ChemostatPlots.jl
Tree: 6486d6ec0cb4d683e1287adbb64287607d448456

--- a/Registry.toml
+++ b/Registry.toml
@@ -4,4 +4,5 @@ repo = "https://github.com/josePereiro/CSC_Registry.jl"
 
 [packages]
 1d417f3e-fd42-11ea-18da-dda57c9b97b2 = { name = "UtilsJL", path = "U/UtilsJL" }
+a87e7f4e-3b34-4b5e-ad6b-f0ab85127471 = { name = "ChemostatPlots", path = "C/ChemostatPlots" }
 c5987326-81b3-11ea-28dd-b531745de20f = { name = "Chemostat", path = "C/Chemostat" }
