--- a/C/ChemostatPlots/Versions.toml
+++ b/C/ChemostatPlots/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.1"]
 git-tree-sha1 = "6486d6ec0cb4d683e1287adbb64287607d448456"
+
+["0.1.2"]
+git-tree-sha1 = "9f88d36ec71a66f169cb2627a9334d0861c45390"
