--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "4ea4db427c056a8d73cf589d619da9e855dc8e36"
 
 ["0.4.10"]
 git-tree-sha1 = "608c9ac2a4b81d90f35a31e87d2b0133706923c7"
+
+["0.5.0"]
+git-tree-sha1 = "565dfc29ea1e40315ec62329fbef9afda9af2013"
