--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "565dfc29ea1e40315ec62329fbef9afda9af2013"
 
 ["0.5.1"]
 git-tree-sha1 = "276ae42e17a8fe87866da867be956b94f2c4958b"
+
+["0.5.2"]
+git-tree-sha1 = "183a9431ff4d8c551d934c81fc2fe3ae4d4da72a"
