--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "276ae42e17a8fe87866da867be956b94f2c4958b"
 
 ["0.5.2"]
 git-tree-sha1 = "183a9431ff4d8c551d934c81fc2fe3ae4d4da72a"
+
+["0.5.3"]
+git-tree-sha1 = "aabfd1d995c893418519992f37f07a4bab691ffb"
