--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "3abb6e83206cde3fc73f92bd63a1b436d0d44cde"
 
 ["0.10.0"]
 git-tree-sha1 = "48c2d734c275a21d2f79e95678206ee3470f4164"
+
+["0.10.1"]
+git-tree-sha1 = "bbe3ff43719d09a8478bd88a14935947a5e7df94"
