New version: ChemostatPlots v0.1.3
UUID: a87e7f4e-3b34-4b5e-ad6b-f0ab85127471
Repo:
Tree: 3324d933c386cb961eaf32816b67e45e7c222b82

--- a/C/ChemostatPlots/Versions.toml
+++ b/C/ChemostatPlots/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "6486d6ec0cb4d683e1287adbb64287607d448456"
 
 ["0.1.2"]
 git-tree-sha1 = "9f88d36ec71a66f169cb2627a9334d0861c45390"
+
+["0.1.3"]
+git-tree-sha1 = "3324d933c386cb961eaf32816b67e45e7c222b82"
