New version: UtilsJL v0.6.0
UUID: 1d417f3e-fd42-11ea-18da-dda57c9b97b2
Repo:
Tree: 58e889b372ebb7e28cde3fc4e3be082e123ae984

--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -48,3 +48,6 @@ git-tree-sha1 = "aabfd1d995c893418519992f37f07a4bab691ffb"
 
 ["0.5.4"]
 git-tree-sha1 = "fc760483bdec382d2281b94f5afa2cef41c9ed39"
+
+["0.6.0"]
+git-tree-sha1 = "58e889b372ebb7e28cde3fc4e3be082e123ae984"
