--- a/U/UtilsJL/Deps.toml
+++ b/U/UtilsJL/Deps.toml
@@ -22,3 +22,6 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 
 ["0.4.9-0"]
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+
+["0.7-0"]
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
