New version: UtilsJL v0.7.1
UUID: 1d417f3e-fd42-11ea-18da-dda57c9b97b2
Repo:
Tree: 909bc1e105d3cc6b2f37bba20728321926bbe4bd

--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "58e889b372ebb7e28cde3fc4e3be082e123ae984"
 
 ["0.7.0"]
 git-tree-sha1 = "f67fe55d6d4ee58f042dc778a29b45abf46431e1"
+
+["0.7.1"]
+git-tree-sha1 = "909bc1e105d3cc6b2f37bba20728321926bbe4bd"
