--- a/C/ChemostatPlots/Versions.toml
+++ b/C/ChemostatPlots/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "9f88d36ec71a66f169cb2627a9334d0861c45390"
 
 ["0.1.3"]
 git-tree-sha1 = "3324d933c386cb961eaf32816b67e45e7c222b82"
+
+["0.1.4"]
+git-tree-sha1 = "73ef574b397438e74aaf22a4982b92c103f586c0"
