New version: Chemostat v0.10.3
UUID: c5987326-81b3-11ea-28dd-b531745de20f
Repo:
Tree: 3cef9f18f0121d1cfbc82b792ddc37d7bb73ecfd

--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "bbe3ff43719d09a8478bd88a14935947a5e7df94"
 
 ["0.10.2"]
 git-tree-sha1 = "dc1032e735af9b226bf46cedfe8e627864ae7e6f"
+
+["0.10.3"]
+git-tree-sha1 = "3cef9f18f0121d1cfbc82b792ddc37d7bb73ecfd"
