New version: DataFileNames v0.2.0
UUID: 82dba31a-8ab6-430f-a22d-9cbb81344561
Repo:
Tree: ca70d3e58ecc6e958464adcdb507b138a9e1ddb6

--- a/D/DataFileNames/Versions.toml
+++ b/D/DataFileNames/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "91c968767521c60e7c55e2eee8c6b97bf860e0e6"
+
+["0.2.0"]
+git-tree-sha1 = "ca70d3e58ecc6e958464adcdb507b138a9e1ddb6"
