--- a/U/UtilsJL/Deps.toml
+++ b/U/UtilsJL/Deps.toml
@@ -3,9 +3,11 @@ BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
-PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
+["0-0.7"]
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 
 ["0.4.2-0"]
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -25,3 +27,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 ["0.7-0"]
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+["0.8-0"]
+DataFileNames = "82dba31a-8ab6-430f-a22d-9cbb81344561"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
