--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -57,3 +57,6 @@ git-tree-sha1 = "f67fe55d6d4ee58f042dc778a29b45abf46431e1"
 
 ["0.7.1"]
 git-tree-sha1 = "909bc1e105d3cc6b2f37bba20728321926bbe4bd"
+
+["0.8.0"]
+git-tree-sha1 = "4fd6c37fdeb8eb1ae773d3d8c6e6a48afacc7f5b"
