New version: DataFileNames v0.3.1
UUID: 82dba31a-8ab6-430f-a22d-9cbb81344561
Repo:
Tree: 2cef20fa2470c08b9e50335b8089aa0418f7ba66

--- a/D/DataFileNames/Versions.toml
+++ b/D/DataFileNames/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "ca70d3e58ecc6e958464adcdb507b138a9e1ddb6"
 
 ["0.3.0"]
 git-tree-sha1 = "942fef4cde142d257fa5577a74d40ad5596bb86c"
+
+["0.3.1"]
+git-tree-sha1 = "2cef20fa2470c08b9e50335b8089aa0418f7ba66"
