--- a/D/DataFileNames/Versions.toml
+++ b/D/DataFileNames/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "942fef4cde142d257fa5577a74d40ad5596bb86c"
 
 ["0.3.1"]
 git-tree-sha1 = "2cef20fa2470c08b9e50335b8089aa0418f7ba66"
+
+["0.3.2"]
+git-tree-sha1 = "9c2c8a51f74f1cacb3582f622133c25cb1d5b620"
