--- a/U/UtilsJL/Versions.toml
+++ b/U/UtilsJL/Versions.toml
@@ -63,3 +63,6 @@ git-tree-sha1 = "4fd6c37fdeb8eb1ae773d3d8c6e6a48afacc7f5b"
 
 ["0.8.1"]
 git-tree-sha1 = "1358c4902980da0da653c3a1970f3921a69586d5"
+
+["0.8.2"]
+git-tree-sha1 = "11b8b49687798c36c87a1a2f30e13462b72742e8"
