New version: ImgTools v0.1.1
UUID: 60a16571-0043-4368-b1b0-a5366d36b020
Repo:
Tree: 78f3fc8084262c34c0ee583b5e0a538453772256

--- a/I/ImgTools/Versions.toml
+++ b/I/ImgTools/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "6ab4a9908846379d16d9d3935bc926b6052a7528"
+
+["0.1.1"]
+git-tree-sha1 = "78f3fc8084262c34c0ee583b5e0a538453772256"
