New version: ChemostatPlots v0.1.5
UUID: a87e7f4e-3b34-4b5e-ad6b-f0ab85127471
Repo:
Tree: 7e2b289492240ebd38cbbd3e34307eb30183976e

--- a/C/ChemostatPlots/Versions.toml
+++ b/C/ChemostatPlots/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "3324d933c386cb961eaf32816b67e45e7c222b82"
 
 ["0.1.4"]
 git-tree-sha1 = "73ef574b397438e74aaf22a4982b92c103f586c0"
+
+["0.1.5"]
+git-tree-sha1 = "7e2b289492240ebd38cbbd3e34307eb30183976e"
