New version: ProjAssistant v0.2.0
UUID: df388e3e-013c-4f8d-ba67-f4afa1ff006b
Repo:
Tree: 5f26f3bcc77cd83ac8843af53fb6e79b1f302cc6

--- a/P/ProjAssistant/Deps.toml
+++ b/P/ProjAssistant/Deps.toml
@@ -6,3 +6,6 @@ ImgTools = "60a16571-0043-4368-b1b0-a5366d36b020"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+
+["0.2-0"]
+ExtractMacro = "f86d3d12-fd5b-522c-99e9-61577282a1e9"
