--- a/P/ProjAssistant/Versions.toml
+++ b/P/ProjAssistant/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "b0240e0113635b67ee84e0357ba2e9dd27a2369a"
+
+["0.2.0"]
+git-tree-sha1 = "5f26f3bcc77cd83ac8843af53fb6e79b1f302cc6"
