New version: ProjAssistant v0.2.1
UUID: df388e3e-013c-4f8d-ba67-f4afa1ff006b
Repo:
Tree: 54e56fe0261b2bdb7792a199040500b5a694afa2

--- a/P/ProjAssistant/Versions.toml
+++ b/P/ProjAssistant/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "b0240e0113635b67ee84e0357ba2e9dd27a2369a"
 
 ["0.2.0"]
 git-tree-sha1 = "5f26f3bcc77cd83ac8843af53fb6e79b1f302cc6"
+
+["0.2.1"]
+git-tree-sha1 = "54e56fe0261b2bdb7792a199040500b5a694afa2"
