--- a/S/SimTools/Versions.toml
+++ b/S/SimTools/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "4fac608916883faf428eb6e02ef8ae03fa35425e"
+
+["0.1.1"]
+git-tree-sha1 = "2cac102825da40f7cbacd0311402891ce3902300"
