--- a/C/Chemostat/Versions.toml
+++ b/C/Chemostat/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "3cef9f18f0121d1cfbc82b792ddc37d7bb73ecfd"
 
 ["0.11.0"]
 git-tree-sha1 = "bf75efb7e3a75ff24324de7b6002e7f7cb09b76d"
+
+["0.11.1"]
+git-tree-sha1 = "03191fb664951065ad9e9e11e5457cf1d4fc7e7b"
