New version: PkgMassInstaller v0.4.1
UUID: 25937451-55af-4cf1-a681-2354f35bf0f3
Repo:
Tree: 24d84555a3c7a4e4fd261aed8fccf1c58647db9b

--- a/P/PkgMassInstaller/Versions.toml
+++ b/P/PkgMassInstaller/Versions.toml
@@ -1,2 +1,5 @@
 ["0.4.0"]
 git-tree-sha1 = "b9f9918b5eac3a56c56380b73ffb6cd893d714f6"
+
+["0.4.1"]
+git-tree-sha1 = "24d84555a3c7a4e4fd261aed8fccf1c58647db9b"
