--- a/M/MyPkgTemplate/Versions.toml
+++ b/M/MyPkgTemplate/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "7e44f54af4213cc60b8cbffbf66863f133f46dff"
+
+["0.3.0"]
+git-tree-sha1 = "bb5f825c32bbdf379ab2dae3163582b67cfaaa22"
