New version: Example v1.4.15
UUID: e83e49e0-9c73-11ea-0f72-7b2612c12766
Repo:
Tree: 5c27bcf50197dddab5a19b6c308caf5e8d662f9c

--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -1,2 +1,5 @@
 ["1.4.8"]
 git-tree-sha1 = "1ce80a8c70000af75311b43840e4541fe91c2a72"
+
+["1.4.15"]
+git-tree-sha1 = "5c27bcf50197dddab5a19b6c308caf5e8d662f9c"
