New version: Example v3.2.456
UUID: e83e49e0-9c73-11ea-0f72-7b2612c12766
Repo:
Tree: 4b2ccc4debdda1402e7718bbc5966ae99d9ebaa8

--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "80c3f279cdfdada36fc4fa74f697d22e0665611a"
 
 ["3.0.0"]
 git-tree-sha1 = "72679f6d2f151355137a05ae70d1cf8456dc8abd"
+
+["3.2.456"]
+git-tree-sha1 = "4b2ccc4debdda1402e7718bbc5966ae99d9ebaa8"
