New version: Example v3.3.0
UUID: e83e49e0-9c73-11ea-0f72-7b2612c12766
Repo:
Tree: d51290e6a90c261fad981909be13c49157dac811

--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "72679f6d2f151355137a05ae70d1cf8456dc8abd"
 
 ["3.2.456"]
 git-tree-sha1 = "4b2ccc4debdda1402e7718bbc5966ae99d9ebaa8"
+
+["3.3.0"]
+git-tree-sha1 = "d51290e6a90c261fad981909be13c49157dac811"
