--- a/Registry.toml
+++ b/Registry.toml
@@ -10,6 +10,7 @@ repo = "https://github.com/josePereiro/CSC_Registry.jl"
 82dba31a-8ab6-430f-a22d-9cbb81344561 = { name = "DataFileNames", path = "D/DataFileNames" }
 948146ab-812c-48a7-a07f-51ea6ea1546c = { name = "MagicDicts", path = "M/MagicDicts" }
 a87e7f4e-3b34-4b5e-ad6b-f0ab85127471 = { name = "ChemostatPlots", path = "C/ChemostatPlots" }
+b110ed5b-1827-4ea4-a31c-50efd441af06 = { name = "JLAssistant", path = "J/JLAssistant" }
 c1c1e88c-cb6c-463d-9723-3dce2b3356d0 = { name = "MyPkgTemplate", path = "M/MyPkgTemplate" }
 c5987326-81b3-11ea-28dd-b531745de20f = { name = "Chemostat", path = "C/Chemostat" }
 d690c95a-5dbf-4f48-8541-cd6f672b0d00 = { name = "SimTools", path = "S/SimTools" }
