New version: JLAssistant v0.2.1
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: cf877ef381f57dc001f40111f6a4283865b4106c

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "0a5a8ef8bceaa09fc668c350da9734eb67bf2ffb"
+
+["0.2.1"]
+git-tree-sha1 = "cf877ef381f57dc001f40111f6a4283865b4106c"
