--- a/J/JLAssistant/Deps.toml
+++ b/J/JLAssistant/Deps.toml
@@ -1,2 +1,6 @@
 [0]
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+
+["0.2.3-0"]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
