New version: Example v3.3.1
UUID: e83e49e0-9c73-11ea-0f72-7b2612c12766
Repo:
Tree: 8f27d61522b427b1dbaa38a1b36257a4d2d98efb

--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "4b2ccc4debdda1402e7718bbc5966ae99d9ebaa8"
 
 ["3.3.0"]
 git-tree-sha1 = "d51290e6a90c261fad981909be13c49157dac811"
+
+["3.3.1"]
+git-tree-sha1 = "8f27d61522b427b1dbaa38a1b36257a4d2d98efb"
