--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "d51290e6a90c261fad981909be13c49157dac811"
 
 ["3.3.1"]
 git-tree-sha1 = "8f27d61522b427b1dbaa38a1b36257a4d2d98efb"
+
+["3.4.1"]
+git-tree-sha1 = "1b0de0e1dd58522cefd42df8a1ba48571fffe17e"
