--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "8f27d61522b427b1dbaa38a1b36257a4d2d98efb"
 
 ["3.4.1"]
 git-tree-sha1 = "1b0de0e1dd58522cefd42df8a1ba48571fffe17e"
+
+["3.4.2"]
+git-tree-sha1 = "6d37801c020667ab22870f42cf0f0b81eef85721"
