New version: JLAssistant v0.2.7
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 91eb11ceef1a84b8f0c796690733fae3cd16f0d4

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "cf877ef381f57dc001f40111f6a4283865b4106c"
 
 ["0.2.3"]
 git-tree-sha1 = "b3919a36be22bc6ba73bc56c176662b1fd8c38e2"
+
+["0.2.7"]
+git-tree-sha1 = "91eb11ceef1a84b8f0c796690733fae3cd16f0d4"
