--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "6d37801c020667ab22870f42cf0f0b81eef85721"
 
 ["3.4.8"]
 git-tree-sha1 = "f4261b04a46da900e93aa6be2adcbda107a1d12a"
+
+["3.4.9"]
+git-tree-sha1 = "c4af7ac4377b30dca6628adca14c2c53059b6f2f"
