New version: Example v3.4.11
UUID: e83e49e0-9c73-11ea-0f72-7b2612c12766
Repo:
Tree: 79c1a3ac4afaa72a2a3b69ad56c90e947a1bc369

--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "f4261b04a46da900e93aa6be2adcbda107a1d12a"
 
 ["3.4.9"]
 git-tree-sha1 = "c4af7ac4377b30dca6628adca14c2c53059b6f2f"
+
+["3.4.11"]
+git-tree-sha1 = "79c1a3ac4afaa72a2a3b69ad56c90e947a1bc369"
