--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "79c1a3ac4afaa72a2a3b69ad56c90e947a1bc369"
 
 ["3.4.13"]
 git-tree-sha1 = "4fdb6f3eea3f2e55288a110e5911e8a1a14f0175"
+
+["3.4.14"]
+git-tree-sha1 = "5b75c2d74fe08628da054704322fdd2be7551c46"
