New version: Example v3.4.15
UUID: e83e49e0-9c73-11ea-0f72-7b2612c12766
Repo:
Tree: 31325021b082b0e521b94c9e6a5c122b155d6cd8

--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "4fdb6f3eea3f2e55288a110e5911e8a1a14f0175"
 
 ["3.4.14"]
 git-tree-sha1 = "5b75c2d74fe08628da054704322fdd2be7551c46"
+
+["3.4.15"]
+git-tree-sha1 = "31325021b082b0e521b94c9e6a5c122b155d6cd8"
