--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "5b75c2d74fe08628da054704322fdd2be7551c46"
 
 ["3.4.15"]
 git-tree-sha1 = "31325021b082b0e521b94c9e6a5c122b155d6cd8"
+
+["3.4.17"]
+git-tree-sha1 = "bc6dde8aa47ac575c8a8250766643984b19dff65"
