--- a/E/Example/Versions.toml
+++ b/E/Example/Versions.toml
@@ -45,3 +45,6 @@ git-tree-sha1 = "31325021b082b0e521b94c9e6a5c122b155d6cd8"
 
 ["3.4.17"]
 git-tree-sha1 = "bc6dde8aa47ac575c8a8250766643984b19dff65"
+
+["3.4.18"]
+git-tree-sha1 = "4d783ffda5f25b5ea882e71a1f4dff48ab3d22ee"
