--- a/F/FilesTreeTools/Versions.toml
+++ b/F/FilesTreeTools/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "84adc39b86ef7cfa0d3ab9b7e929fd3cb2fbe1e6"
+
+["0.2.1"]
+git-tree-sha1 = "2f8064a66585ec52383cb2a66c8019a4316ef718"
