--- a/D/DataFileNames/Versions.toml
+++ b/D/DataFileNames/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "6b2cdd9dc21fb6f87ceab463fd38e3393ac9527d"
 
 ["0.3.4"]
 git-tree-sha1 = "be014bef2b5a9ba90a3e96f3100d73880259350a"
+
+["0.3.5"]
+git-tree-sha1 = "3d3a2cac57200d049e3a85a817f6eee087f57b38"
