New version: JLAssistant v0.2.8
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 8d284e66b2cc38e5743dbd05c6be6e3abae570e2

--- a/J/JLAssistant/Deps.toml
+++ b/J/JLAssistant/Deps.toml
@@ -4,3 +4,8 @@ TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 ["0.2.3-0"]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
+
+["0.2.8-0"]
+FilesTreeTools = "638332cd-b357-4bf5-bfa2-3531168477f5"
+MyPkgTemplate = "c1c1e88c-cb6c-463d-9723-3dce2b3356d0"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
