--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "b3919a36be22bc6ba73bc56c176662b1fd8c38e2"
 
 ["0.2.7"]
 git-tree-sha1 = "91eb11ceef1a84b8f0c796690733fae3cd16f0d4"
+
+["0.2.8"]
+git-tree-sha1 = "8d284e66b2cc38e5743dbd05c6be6e3abae570e2"
