--- a/J/JLAssistant/Deps.toml
+++ b/J/JLAssistant/Deps.toml
@@ -9,3 +9,6 @@ LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
 FilesTreeTools = "638332cd-b357-4bf5-bfa2-3531168477f5"
 MyPkgTemplate = "c1c1e88c-cb6c-463d-9723-3dce2b3356d0"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+
+["0.2.9-0"]
+RegexTools = "3cb95532-3c78-4535-bbc5-067405b402f6"
