--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "8d284e66b2cc38e5743dbd05c6be6e3abae570e2"
 
 ["0.2.9"]
 git-tree-sha1 = "df84512ec98361024c50bf22a647988b2f167695"
+
+["0.2.10"]
+git-tree-sha1 = "7d3d69a90b96e8ba5b9c3eb1a20f9d71be1e4fd2"
