--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "7d3d69a90b96e8ba5b9c3eb1a20f9d71be1e4fd2"
 
 ["0.2.11"]
 git-tree-sha1 = "099a87ab6cd0a8a248788baff98a539de5db23f7"
+
+["0.2.12"]
+git-tree-sha1 = "f7e489156b636023ed0eca7b67a497a50395d7ea"
