--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "099a87ab6cd0a8a248788baff98a539de5db23f7"
 
 ["0.2.12"]
 git-tree-sha1 = "f7e489156b636023ed0eca7b67a497a50395d7ea"
+
+["0.2.13"]
+git-tree-sha1 = "249351d90dae6106424e3140da61406ee1498128"
