New version: JLAssistant v0.2.14
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: c91a5d825ff8ec068b13f9d7d1e1beaf020872d4

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "f7e489156b636023ed0eca7b67a497a50395d7ea"
 
 ["0.2.13"]
 git-tree-sha1 = "249351d90dae6106424e3140da61406ee1498128"
+
+["0.2.14"]
+git-tree-sha1 = "c91a5d825ff8ec068b13f9d7d1e1beaf020872d4"
