New version: ProjAssistant v0.3.1
UUID: df388e3e-013c-4f8d-ba67-f4afa1ff006b
Repo:
Tree: 9d42923823a28bffd0aa1f71b3978f995813ab49

--- a/P/ProjAssistant/Deps.toml
+++ b/P/ProjAssistant/Deps.toml
@@ -9,3 +9,6 @@ Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 
 ["0.2-0"]
 ExtractMacro = "f86d3d12-fd5b-522c-99e9-61577282a1e9"
+
+["0.3.1-0"]
+FilesTreeTools = "638332cd-b357-4bf5-bfa2-3531168477f5"
