--- a/P/ProjAssistant/Versions.toml
+++ b/P/ProjAssistant/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "54e56fe0261b2bdb7792a199040500b5a694afa2"
 
 ["0.3.0"]
 git-tree-sha1 = "76802fcb4ce963c9676d8648e5000d9c863468f5"
+
+["0.3.1"]
+git-tree-sha1 = "9d42923823a28bffd0aa1f71b3978f995813ab49"
