New version: FilesTreeTools v0.3.0
UUID: 638332cd-b357-4bf5-bfa2-3531168477f5
Repo:
Tree: 8854c29743e17199492b57e565e995bcfd912ec4

--- a/F/FilesTreeTools/Versions.toml
+++ b/F/FilesTreeTools/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "84adc39b86ef7cfa0d3ab9b7e929fd3cb2fbe1e6"
 
 ["0.2.1"]
 git-tree-sha1 = "2f8064a66585ec52383cb2a66c8019a4316ef718"
+
+["0.3.0"]
+git-tree-sha1 = "8854c29743e17199492b57e565e995bcfd912ec4"
