New version: ExternalCmds v0.1.1
UUID: 6bfc0cc1-c423-4851-8624-db00c2e00b7b
Repo:
Tree: 453a7ee04240086702f90a9a908a73334772a0e1

--- a/E/ExternalCmds/Versions.toml
+++ b/E/ExternalCmds/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "702f2884d994f0d6a6badceb43908de6ce32f496"
+
+["0.1.1"]
+git-tree-sha1 = "453a7ee04240086702f90a9a908a73334772a0e1"
