New version: ExternalCmds v0.1.2
UUID: 6bfc0cc1-c423-4851-8624-db00c2e00b7b
Repo:
Tree: 66ee1e7e7e0170a915e9b190ba30ac0e8384a31c

--- a/E/ExternalCmds/Versions.toml
+++ b/E/ExternalCmds/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "702f2884d994f0d6a6badceb43908de6ce32f496"
 
 ["0.1.1"]
 git-tree-sha1 = "453a7ee04240086702f90a9a908a73334772a0e1"
+
+["0.1.2"]
+git-tree-sha1 = "66ee1e7e7e0170a915e9b190ba30ac0e8384a31c"
