--- a/G/GitWorkers/Versions.toml
+++ b/G/GitWorkers/Versions.toml
@@ -1,2 +1,5 @@
 ["0.5.0"]
 git-tree-sha1 = "ffaff1a50ec50657cd4257e90d4fae8efea7bf81"
+
+["0.6.0"]
+git-tree-sha1 = "7547860e68422cab2d5a02b865e09917222fb988"
