New version: ProjAssistant v0.3.2
UUID: df388e3e-013c-4f8d-ba67-f4afa1ff006b
Repo:
Tree: db7dbe2e79c6a3eb7ff966dce6a6e7f19f7a217d

--- a/P/ProjAssistant/Deps.toml
+++ b/P/ProjAssistant/Deps.toml
@@ -12,3 +12,6 @@ ExtractMacro = "f86d3d12-fd5b-522c-99e9-61577282a1e9"
 
 ["0.3.1-0"]
 FilesTreeTools = "638332cd-b357-4bf5-bfa2-3531168477f5"
+
+["0.3.2-0"]
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
