--- a/G/GitWorkers/Versions.toml
+++ b/G/GitWorkers/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "7547860e68422cab2d5a02b865e09917222fb988"
 
 ["0.6.1"]
 git-tree-sha1 = "63f1ae841a91170e7aabbcd79ea9ff6c29e7639c"
+
+["0.6.2"]
+git-tree-sha1 = "f56fd73dba97a48353809f03e1775be9a80a995a"
