New version: GitWorkers v0.7.0
UUID: 9e5d5e8c-ba81-11ea-39e8-15323c797f61
Repo:
Tree: 006c7bdc3f172822929af4a8b20e11796156727d

--- a/G/GitWorkers/Versions.toml
+++ b/G/GitWorkers/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "63f1ae841a91170e7aabbcd79ea9ff6c29e7639c"
 
 ["0.6.2"]
 git-tree-sha1 = "f56fd73dba97a48353809f03e1775be9a80a995a"
+
+["0.7.0"]
+git-tree-sha1 = "006c7bdc3f172822929af4a8b20e11796156727d"
