--- a/G/GitWorkers/Versions.toml
+++ b/G/GitWorkers/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "f56fd73dba97a48353809f03e1775be9a80a995a"
 
 ["0.7.0"]
 git-tree-sha1 = "006c7bdc3f172822929af4a8b20e11796156727d"
+
+["0.7.1"]
+git-tree-sha1 = "690cfb1ee2cb1e82d2b5b1d087b5ccf59abea0b7"
