--- a/P/ProjAssistant/Versions.toml
+++ b/P/ProjAssistant/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "9d42923823a28bffd0aa1f71b3978f995813ab49"
 
 ["0.3.2"]
 git-tree-sha1 = "db7dbe2e79c6a3eb7ff966dce6a6e7f19f7a217d"
+
+["0.3.3"]
+git-tree-sha1 = "c09eec0ba34c956d2a8caffa48b9876eee1e5728"
