--- a/P/ProjAssistant/Versions.toml
+++ b/P/ProjAssistant/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "db7dbe2e79c6a3eb7ff966dce6a6e7f19f7a217d"
 
 ["0.3.3"]
 git-tree-sha1 = "c09eec0ba34c956d2a8caffa48b9876eee1e5728"
+
+["0.3.4"]
+git-tree-sha1 = "b984a3c4aefa3e63ac89a071bddbceb1f5e91c90"
