--- a/Registry.toml
+++ b/Registry.toml
@@ -20,4 +20,5 @@ c1c1e88c-cb6c-463d-9723-3dce2b3356d0 = { name = "MyPkgTemplate", path = "M/MyPkg
 c5987326-81b3-11ea-28dd-b531745de20f = { name = "Chemostat", path = "C/Chemostat" }
 d690c95a-5dbf-4f48-8541-cd6f672b0d00 = { name = "SimTools", path = "S/SimTools" }
 df388e3e-013c-4f8d-ba67-f4afa1ff006b = { name = "ProjAssistant", path = "P/ProjAssistant" }
+e57bcde5-101c-47b4-bac9-e79e238e37d4 = { name = "MetNets", path = "M/MetNets" }
 e83e49e0-9c73-11ea-0f72-7b2612c12766 = { name = "Example", path = "E/Example" }
