--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "0d0a921b38d2cc464cb1118c9bc2c4748d47fa80"
+
+["0.1.1"]
+git-tree-sha1 = "89c2c09bcd8894791076a225e594fb9a2ff21036"
