New version: MetNets v0.1.2
UUID: e57bcde5-101c-47b4-bac9-e79e238e37d4
Repo:
Tree: d4cc884aa4ae38fcf712145f3dc1518592e8fc50

--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "0d0a921b38d2cc464cb1118c9bc2c4748d47fa80"
 
 ["0.1.1"]
 git-tree-sha1 = "89c2c09bcd8894791076a225e594fb9a2ff21036"
+
+["0.1.2"]
+git-tree-sha1 = "d4cc884aa4ae38fcf712145f3dc1518592e8fc50"
