New version: MetNets v0.1.3
UUID: e57bcde5-101c-47b4-bac9-e79e238e37d4
Repo:
Tree: 1b27c7d0d0367003f788e57bae1c75e3f3d84374

--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "89c2c09bcd8894791076a225e594fb9a2ff21036"
 
 ["0.1.2"]
 git-tree-sha1 = "d4cc884aa4ae38fcf712145f3dc1518592e8fc50"
+
+["0.1.3"]
+git-tree-sha1 = "1b27c7d0d0367003f788e57bae1c75e3f3d84374"
