--- a/Registry.toml
+++ b/Registry.toml
@@ -16,6 +16,7 @@ repo = "https://github.com/FF-UH/CSC_Registry.jl"
 9e5d5e8c-ba81-11ea-39e8-15323c797f61 = { name = "GitWorkers", path = "G/GitWorkers" }
 a87e7f4e-3b34-4b5e-ad6b-f0ab85127471 = { name = "ChemostatPlots", path = "C/ChemostatPlots" }
 b110ed5b-1827-4ea4-a31c-50efd441af06 = { name = "JLAssistant", path = "J/JLAssistant" }
+bb7579a6-17cc-4454-bc80-c1b83f10c6c8 = { name = "MetLP", path = "M/MetLP" }
 c1c1e88c-cb6c-463d-9723-3dce2b3356d0 = { name = "MyPkgTemplate", path = "M/MyPkgTemplate" }
 c5987326-81b3-11ea-28dd-b531745de20f = { name = "Chemostat", path = "C/Chemostat" }
 d690c95a-5dbf-4f48-8541-cd6f672b0d00 = { name = "SimTools", path = "S/SimTools" }
