New version: MetLP v0.1.1
UUID: bb7579a6-17cc-4454-bc80-c1b83f10c6c8
Repo:
Tree: ce3b75a5befd0d2a4f9dcf1d245c7cd79d9f2e8b

--- a/M/MetLP/Versions.toml
+++ b/M/MetLP/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "4019c5d3ff03fe7a50e99bfad8fad7aa67e5d2d6"
+
+["0.1.1"]
+git-tree-sha1 = "ce3b75a5befd0d2a4f9dcf1d245c7cd79d9f2e8b"
