--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "d4cc884aa4ae38fcf712145f3dc1518592e8fc50"
 
 ["0.1.3"]
 git-tree-sha1 = "1b27c7d0d0367003f788e57bae1c75e3f3d84374"
+
+["0.1.4"]
+git-tree-sha1 = "90d662526924135a71afe62ce4f6a8499d69c377"
