--- a/M/MetLP/Versions.toml
+++ b/M/MetLP/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "4019c5d3ff03fe7a50e99bfad8fad7aa67e5d2d6"
 
 ["0.1.1"]
 git-tree-sha1 = "ce3b75a5befd0d2a4f9dcf1d245c7cd79d9f2e8b"
+
+["0.1.2"]
+git-tree-sha1 = "a18c61976152b9e86d5a761a2f6efd302e9d863a"
