--- a/M/MetLP/Versions.toml
+++ b/M/MetLP/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "ce3b75a5befd0d2a4f9dcf1d245c7cd79d9f2e8b"
 
 ["0.1.2"]
 git-tree-sha1 = "a18c61976152b9e86d5a761a2f6efd302e9d863a"
+
+["0.1.3"]
+git-tree-sha1 = "5db64f5d313fb4199977ca7729dce8989791b76d"
