New version: MetNets v0.1.6
UUID: e57bcde5-101c-47b4-bac9-e79e238e37d4
Repo:
Tree: 1e3d079c89175b7af97dbc3914801403d6feb70f

--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "90d662526924135a71afe62ce4f6a8499d69c377"
 
 ["0.1.5"]
 git-tree-sha1 = "0a05e18a79be63489ec64a44cf4441177eb2e6ac"
+
+["0.1.6"]
+git-tree-sha1 = "1e3d079c89175b7af97dbc3914801403d6feb70f"
