New version: MetLP v0.1.4
UUID: bb7579a6-17cc-4454-bc80-c1b83f10c6c8
Repo:
Tree: 3bf44e1e0b551cf778d1cf144a98b56b5c84dc28

--- a/M/MetLP/Versions.toml
+++ b/M/MetLP/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "a18c61976152b9e86d5a761a2f6efd302e9d863a"
 
 ["0.1.3"]
 git-tree-sha1 = "5db64f5d313fb4199977ca7729dce8989791b76d"
+
+["0.1.4"]
+git-tree-sha1 = "3bf44e1e0b551cf778d1cf144a98b56b5c84dc28"
