New version: JLAssistant v0.2.15
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 329ef53382e530ba2101bbfed866857cc8d67f75

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "249351d90dae6106424e3140da61406ee1498128"
 
 ["0.2.14"]
 git-tree-sha1 = "c91a5d825ff8ec068b13f9d7d1e1beaf020872d4"
+
+["0.2.15"]
+git-tree-sha1 = "329ef53382e530ba2101bbfed866857cc8d67f75"
