--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "329ef53382e530ba2101bbfed866857cc8d67f75"
 
 ["0.2.16"]
 git-tree-sha1 = "6416fd3c523e2975ff24c29ec9a7d1a4f6691f12"
+
+["0.2.17"]
+git-tree-sha1 = "e951232b9626046ba4231cec204675b88112e1b6"
