--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "6416fd3c523e2975ff24c29ec9a7d1a4f6691f12"
 
 ["0.2.17"]
 git-tree-sha1 = "e951232b9626046ba4231cec204675b88112e1b6"
+
+["0.2.18"]
+git-tree-sha1 = "f2bb0d2fa094efee362ae4184a01082565556c7d"
