--- a/M/MetNets/Deps.toml
+++ b/M/MetNets/Deps.toml
@@ -2,3 +2,6 @@
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
+["0.1.7-0"]
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
