--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "0a05e18a79be63489ec64a44cf4441177eb2e6ac"
 
 ["0.1.6"]
 git-tree-sha1 = "1e3d079c89175b7af97dbc3914801403d6feb70f"
+
+["0.1.7"]
+git-tree-sha1 = "d8a2a2821d68f953a95f21ec8b7d144a0fedd435"
