--- a/J/JLAssistant/Deps.toml
+++ b/J/JLAssistant/Deps.toml
@@ -1,14 +1,20 @@
 [0]
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
+["0.2.19-0"]
+LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
+
 ["0.2.3-0"]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
 
 ["0.2.8-0"]
 FilesTreeTools = "638332cd-b357-4bf5-bfa2-3531168477f5"
-MyPkgTemplate = "c1c1e88c-cb6c-463d-9723-3dce2b3356d0"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+
+["0.2.8-0.2.18"]
+MyPkgTemplate = "c1c1e88c-cb6c-463d-9723-3dce2b3356d0"
 
 ["0.2.9-0"]
 RegexTools = "3cb95532-3c78-4535-bbc5-067405b402f6"
