--- a/M/MetLP/Deps.toml
+++ b/M/MetLP/Deps.toml
@@ -1,6 +1,11 @@
 [0]
 Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
-MathProgBase = "fdba3010-5040-5b88-9595-932c9decdf73"
 MetNets = "e57bcde5-101c-47b4-bac9-e79e238e37d4"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
+["0-0.1"]
+MathProgBase = "fdba3010-5040-5b88-9595-932c9decdf73"
+
+["0.2-0"]
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
