New version: MetLP v0.3.0
UUID: bb7579a6-17cc-4454-bc80-c1b83f10c6c8
Repo:
Tree: 7f25817ad090289cf88c11758a268fd502e8e70d

--- a/M/MetLP/Versions.toml
+++ b/M/MetLP/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "3bf44e1e0b551cf778d1cf144a98b56b5c84dc28"
 
 ["0.2.0"]
 git-tree-sha1 = "642ca45e16d89fc2e40c4d02950cba8009f811ac"
+
+["0.3.0"]
+git-tree-sha1 = "7f25817ad090289cf88c11758a268fd502e8e70d"
