--- a/M/MetNets/Deps.toml
+++ b/M/MetNets/Deps.toml
@@ -5,3 +5,6 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 ["0.1.7-0"]
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+["0.1.8-0"]
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
