--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "1e3d079c89175b7af97dbc3914801403d6feb70f"
 
 ["0.1.7"]
 git-tree-sha1 = "d8a2a2821d68f953a95f21ec8b7d144a0fedd435"
+
+["0.1.8"]
+git-tree-sha1 = "2381ec395a54410fe9f7bc226903715ff36b0bfa"
