--- a/M/MetLP/Versions.toml
+++ b/M/MetLP/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "642ca45e16d89fc2e40c4d02950cba8009f811ac"
 
 ["0.3.0"]
 git-tree-sha1 = "7f25817ad090289cf88c11758a268fd502e8e70d"
+
+["0.4.0"]
+git-tree-sha1 = "a4992f7080b785621c4edcbd7c3ceeca505bc6f3"
