New version: GitLinks v0.3.0
UUID: e5655290-0136-40fd-b997-9e22755203bc
Repo:
Tree: b29d964bec4f89a76bb6f31194ac824a2644b3af

--- a/G/GitLinks/Versions.toml
+++ b/G/GitLinks/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "67393ffa46e01a44b56c8115403aafb57b1c9019"
+
+["0.3.0"]
+git-tree-sha1 = "b29d964bec4f89a76bb6f31194ac824a2644b3af"
