--- a/G/GitLinks/Versions.toml
+++ b/G/GitLinks/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "fde43bafb3fe0429c83ee511e78f9954a66e46fc"
 
 ["0.5.0"]
 git-tree-sha1 = "ce495203f765fecc816259f864c7be470a1375c2"
+
+["0.5.1"]
+git-tree-sha1 = "ab8077fdd86b0f64ac88546ae10b8434ab14b770"
