--- a/E/ExternalCmds/Versions.toml
+++ b/E/ExternalCmds/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "66ee1e7e7e0170a915e9b190ba30ac0e8384a31c"
 
 ["0.1.3"]
 git-tree-sha1 = "2e1de69b8d2ea9fb967d480755de373814dfd336"
+
+["0.2.0"]
+git-tree-sha1 = "dd2b460f23fb2058f846dafc461ec848f0bb8ef8"
