New version: GitLinks v0.6.0
UUID: e5655290-0136-40fd-b997-9e22755203bc
Repo:
Tree: e49acd3a280ab2e54d388b94e59b45718ad979de

--- a/G/GitLinks/Versions.toml
+++ b/G/GitLinks/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "ab8077fdd86b0f64ac88546ae10b8434ab14b770"
 
 ["0.5.2"]
 git-tree-sha1 = "33f5e3d36795d6e2400151488d98949588750acf"
+
+["0.6.0"]
+git-tree-sha1 = "e49acd3a280ab2e54d388b94e59b45718ad979de"
